router pelo banco e melhorias no login