@@ -1,8 +1,11 @@
 package com.roderly.microbiomelabufu.menu.service;
 
 import com.roderly.microbiomelabufu.menu.dto.response.MenuLateralResponse;
+import com.roderly.microbiomelabufu.menu.dto.response.VueRouterResponse;
 import com.roderly.microbiomelabufu.menu.mapper.MenuMapper;
+import com.roderly.microbiomelabufu.menu.mapper.VueRouterMapper;
 import com.roderly.microbiomelabufu.menu.repository.MenuRepository;
+import com.roderly.microbiomelabufu.menu.repository.VueRouteRepository;
 import com.roderly.microbiomelabufu.paciente.dto.response.EnderecoResponse;
 import com.roderly.microbiomelabufu.paciente.dto.response.FotoPerfilResponse;
 import com.roderly.microbiomelabufu.paciente.dto.response.PacienteCompletoResponse;
@@ -22,16 +25,20 @@ public class MenuService {
 
     @Autowired
     MenuRepository menuRepository;
+    @Autowired
+    VueRouteRepository vueRouteRepository;
 
     public List<MenuLateralResponse> buscarDadosMenu() {
-
         var menu = menuRepository.findAll();
         return menu.stream()
-                .map(MenuMapper::menuLateralToMenuLateralResponse)
-                .collect(Collectors.toList());
+                .map(MenuMapper::menuLateralToMenuLateralResponse).toList();
     }
 
 
+    public List<VueRouterResponse> buscarDadosRouter(){
+        var vueRoutes = vueRouteRepository.findAll();
+        return VueRouterMapper.vueRouterToVueRouterResponse(vueRoutes);
+    }
 
 
 }
